sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:7: error: ';' expected but '=' found.
		eff : Int = 0;
                          ^